--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ipfs-http-client": "^56.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "react-redux": "^8.0.1",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.3.0",
